Fixed issues on sort and filter on tabulator tables. Added new endpoints do provide data exchange. Fixed installation of kafka (removed zookeeper dependency). Fixed issue on show images before authentication.